# StormCore

./: .gitignore  .travis.yml  AcherusCH.sql  Ally and Horde Mages WoD.sql  Ally and Horde MagesT.sql  Archimonde Normal Loot.sql  Aszuna Rares.sql  Atiesh.sql  AzsunaRaresAndMobs1.sql  CMakeLists.txt  Changefaction (Dh Start Sets).sql  Containerbags.sql  Containerbags2.sql  DeathKnightCH.sql  DeathKnightClassHall.sql  DeathKnightClassHallT.sql  DeathKnightClassHallVendor.sql  Demon Hunter in Funeral (Ally and Horde).sql  DemonHunterCH.sql  DemonHunterClassHall.sql  DemonHunterClassHallTemplate.sql  DemonHunterClassHallVendor.sql  DhHallClassSpawnsandGobjects.sql  DownfallmobFix.sql  DraenorGob.sql  Escudo_tormenta.sql  Falara Nightsong Items.sql  Fel HammerCH.sql  FixNpcsOrgrimmar1.sql  FixNpcsOrgrimmar2.sql  Gaardoun.sql  GameTelesHallClass.sql  GatesofOrgrimmar.sql  Gorgroth.sql  HFEquip.sql  Heads of factions.sql  HordeNewNPCweapons.sql  Illidari Horde Camp (Gobject).sql  IllidariAllyCamp.sql  IllidariAllyCampWeapons.sql  (+62 more)
contrib/protoc-bnet/: CMakeLists.txt
dep/CascLib/: CMakeLists.txt
dep/SFMT/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dep/boost/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dep/bzip2/: CMakeLists.txt
dep/fmt/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fmt.vcxproj  fmt.vcxproj.filters
dep/g3dlite/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  g3dlib.vcxproj  g3dlib.vcxproj.filters
dep/gsoap/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gsoap.vcxproj  gsoap.vcxproj.filters
dep/jemalloc/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dep/mysql/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dep/openssl/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dep/readline/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dep/recastnavigation/Detour/: CMakeLists.txt  Detour.vcxproj  Detour.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dep/recastnavigation/Recast/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Recast.vcxproj  Recast.vcxproj.filters  cmake_install.cmake
dep/zlib/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.vcxproj  zlib.vcxproj.filters
src/: CMakeLists.txt  protectorspawn.sql
src/common/: Banner.cpp  Banner.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  DynamicTree.cpp  DynamicTree.h  VMapDefinitions.h  VMapTools.h
src/common/Collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/common/Collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/common/Configuration/: BuiltInConfig.cpp  BuiltInConfig.h  Config.cpp  Config.h
src/common/Cryptography/: ARC4.cpp  ARC4.h  BigNumber.cpp  BigNumber.h  HmacHash.cpp  HmacHash.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SHA1.cpp  SHA1.h  SHA256.cpp  SHA256.h  SessionKeyGeneration.h
src/common/Cryptography/Authentication/: PacketCrypt.cpp  PacketCrypt.h  WorldPacketCrypt.cpp  WorldPacketCrypt.h
src/common/DataStores/: DB2Meta.cpp  DB2Meta.h
src/common/Debugging/: Errors.cpp  Errors.h
src/common/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogOperation.cpp  LogOperation.h  Logger.cpp  Logger.h
src/common/Metric/: Metric.cpp  Metric.h
src/common/Platform/: ServiceWin32.cpp  ServiceWin32.h
src/common/Threading/: LockedQueue.h  MPSCQueue.h  ProcessPriority.h  ProducerConsumerQueue.h
src/common/Utilities/: ByteConverter.h  Containers.h  Duration.h  EventMap.cpp  EventMap.h  EventProcessor.cpp  EventProcessor.h  MessageBuffer.h  Random.cpp  Random.h  Regex.h  StartProcess.cpp  StartProcess.h  StringFormat.h  TaskScheduler.cpp  TaskScheduler.h  Timer.h  Util.cpp  Util.h
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/bnetserver/: CMakeLists.txt  Main.cpp  bnetserver.conf.dist  bnetserver.rc
src/server/bnetserver/REST/: LoginRESTService.cpp  LoginRESTService.h
src/server/bnetserver/Server/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  SslContext.cpp  SslContext.h
src/server/bnetserver/Services/: AccountService.cpp  AccountService.h  AuthenticationService.cpp  AuthenticationService.h  (+7 more)
src/server/database/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/proto/: BattlenetRpcErrorCodes.h  CMakeLists.txt  ServiceBase.h
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp.in.cmake  ScriptLoader.h  ScriptPCH.cpp  ScriptPCH.h
src/server/shared/: CMakeLists.txt
src/server/worldserver/: CMakeLists.txt  Main.cpp  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/connection_patcher/: CMakeLists.txt  Helper.cpp  Helper.hpp  Patcher.cpp  Patcher.hpp  Program.cpp
src/tools/extractor_common/: CMakeLists.txt  CascHandles.cpp  CascHandles.h
src/tools/map_extractor/: CMakeLists.txt  DB2.cpp  System.cpp  adt.h  loadlib.cpp  wdt.h
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt  DB2.h  adtfile.cpp  adtfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+1704 files in other folders)
